# Arp

./: .gitattributes  .gitignore  .gitmodules  Algorithm.h  Algorithm.hpp  CMakeLists.txt  HashRandom.cpp  HashRandom.hpp  PLUGIN_CONFIG  ParamData.cpp  README.md  Starp.hpp  StarpEditor.cpp  StarpEditor.h  StarpEditor.hpp  StarpProcessor.cpp  StarpProcessor.h  StarpProcessor.hpp  project_vars.sh
.github/workflows/: cmake.yml  linux-release.yml  macos-release.yml  user-manual.yml  win64-release.yml
CMake/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  ReadConfig.cmake
Modules/: CMakeLists.txt
Modules/shared_plugin_helpers/ProcessorBase/: ProcessorBase.cpp
Source/: Algorithm.hpp  AlgorithmEnum.hpp  AlgorithmParameters.hpp  CMakeLists.txt  HashRandom.cpp  HashRandom.hpp  ParamData.cpp  ParamData.hpp  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.hpp  ProcessorParameters.cpp  ProcessorParameters.hpp  Starp.hpp  StarpEditor.cpp  StarpEditor.hpp  StarpProcessor.cpp  StarpProcessor.hpp  ValueListener.hpp  position_data.hpp  version.hpp.in
Source/Algorithms/: AlgoBase.hpp  LinearAlgorithm.hpp  RandomAlgorithm.hpp  SpiralAlgorithm.hpp
Source/EditorComponent/: AlgoChoiceComponent.cpp  AlgoChoiceComponent.hpp  AlgorithmComponent.cpp  AlgorithmComponent.hpp  BoxComponent.cpp  BoxComponent.hpp  ButtonGroupComponent.cpp  ButtonGroupComponent.hpp  HeaderComponent.cpp  HeaderComponent.hpp  LinearAlgoOptionsComponent.cpp  LinearAlgoOptionsComponent.hpp  MainComponent.cpp  MainComponent.hpp  OverlayComponent.hpp  PropertyComponent.cpp  PropertyComponent.hpp  RandomAlgoOptionsComponent.cpp  RandomAlgoOptionsComponent.hpp  SpiralAlgoOptionsComponent.cpp  SpiralAlgoOptionsComponent.hpp
Source/Processor/: processing.cpp  setup.cpp
Source/StarpProcessor/: processing.cpp  setup.cpp
Tests/: CMakeLists.txt  Tests.cpp
docs/: BUILDING.md  CHANGELOG.txt  INSTALLATION_GUIDE.md  USER_MANUAL.md
packaging/: create-deb
packaging/debian/: control  copyright
packaging/windows/: plugin.iss
